# pgrsql

./: .gitignore  CLAUDE.md  Cargo.toml  LEAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  lean.yml  release.yml
benches/: sql_benchmarks.rs
lean/: Verification.lean  lake-manifest.json  lakefile.toml
lean/Verification/: Basic.lean  Examples.lean  NullSemantics.lean  Operations.lean  Theorems.lean
python/pgrsql/: __init__.py
src/: bookmarks.rs  explain.rs  export.rs  lib.rs  main.rs  python.rs
src/ast/: adapter.rs  compiler.rs  formatter.rs  mod.rs  optimizer.rs  parser.rs  plugin.rs  types.rs
src/db/: connection.rs  mod.rs  query.rs  schema.rs
src/editor/: buffer.rs  history.rs  mod.rs
src/ui/: app.rs  components.rs  mod.rs  theme.rs
src/ui/app/: connection.rs  editor.rs  mod.rs  results.rs  sidebar.rs
