[package]
name = "pgrsql"
version = "0.1.1"
edition = "2021"
authors = ["Muk2"]
description = "A beautiful TUI SQL editor for PostgreSQL"
license = "MIT"
repository = "https://github.com/muk2/pgrsql"
keywords = ["postgresql", "sql", "tui", "database", "editor"]
categories = ["command-line-utilities", "database"]

[dependencies]
# TUI framework
ratatui = "0.28"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-serde_json-1"] }
deadpool-postgres = "0.14"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
anyhow = "1"
thiserror = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Syntax highlighting
syntect = "5"

# Unicode handling
unicode-width = "0.1"

# Clipboard
arboard = "3"

# TLS
native-tls = "0.2"
postgres-native-tls = "0.5"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Password prompt
rpassword = "5"

# Home directory
dirs = "5"

# Logging (optional for debugging)
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "pgrsql"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
