[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pgrsql"
version = "0.1.3"
description = "High-performance SQL parsing, optimization, and analysis engine powered by Rust"
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = ["sql", "postgresql", "parser", "optimizer", "database"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]

[tool.maturin]
features = ["python"]
module-name = "pgrsql._pgrsql"
python-source = "python"
